--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "axios": "^0.27.2",
+    "framer-motion": "^6.3.3",
     "gsap": "^3.10.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
